# hf_midi_transcription

./: .gitignore  README.md  example.py  instruments.json  pyproject.toml  test.mid  test_hf_integration.py  upload_model_weights.py  upload_to_hf.py
hf_midi_transcription/: __init__.py  cli.py  model.py
hf_sax_transcription/: __init__.py  cli.py  model.py
midi-transcription-model-bass-local/: config.json
midi-transcription-model-guitar-local/: config.json
midi-transcription-model-piano-local/: config.json  model.safetensors
midi-transcription-model-saxophone-local/: README.md  config.json
